data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_263.wast
;; 4. **Test Description: Include `nop` before a loop that has a `br_table` for exiting under specific conditions.**    - **Reasoning**: Check that `nop` hasn't altered the stack and control flow for `br_table`.    - **Check**: The loop should exit as per the `br_table` target conditions.

(assert_invalid
  (module (func (nop) (loop (br_table 0 (nop)))))
  "type mismatch"
)